# chrono_fmu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package_release.py  parameter_sweep.py  road_generator_gui.py  test_road_generator_gui.py
demo_VEH_FMI2_WheeledVehicle_4torques/: CMakeLists.txt  demo_VEH_FMI2_WheeledVehicle_4torques.cpp
demo_VEH_FMI2_WheeledVehicle_lanechange/: demo_VEH_FMI2_WheeledVehicle_lanechange.cpp
docs/software/: directory_structure.md  fmu_parameters.m  installation.md  parameter_sweep.md  simulink_integration.md
docs/theoretical/: customizations_report.md  kpi_analysis_report.md  subsystem_parameters_guide.md
export/: README.md  bezier_path_generation.md  fmu_parameters.m
fmu2_path_follower_driver/: CMakeLists.txt  FMU_PathFollowerDriver.cpp  FMU_PathFollowerDriver.h
fmu2_path_follower_driver/resources/: default_lane_change_path.txt
fmu2_wheeled_vehicle_4torques/: CMakeLists.txt  FMU_WheeledVehicle4Torques.cpp  FMU_WheeledVehicle4Torques.h
fmu2_wheeled_vehicle_4torques/resources/: DoubleWishboneFront.json  DoubleWishboneRear.json  Driveline2WD.json  RackPinion.json
fmu2_wheeled_vehicle_4torques/resources/vehicle/sedan/tire/: Sedan_Pac02Tire.json  Sedan_TMeasyTire.json
fmus/: FMU2cs_PathFollowerDriver.fmu  FMU2cs_WheeledVehicle4Torques.fmu
road_generator/: README.md  default_lane_change_path.txt  default_road.crg  generate_road.cpp  road_generator.py
scripts/: build_chrono.bat  build_fmus.bat  generate_road.bat  run_demo.bat
src/demo_VEH_FMI2_WheeledVehicle_4torques/: demo_VEH_FMI2_WheeledVehicle_4torques.cpp
src/demo_VEH_FMI2_WheeledVehicle_lanechange/: CMakeLists.txt  demo_VEH_FMI2_WheeledVehicle_cosim.cpp  demo_VEH_FMI2_WheeledVehicle_lanechange.cpp
src/fmu2_path_follower_driver/: CMakeLists.txt  FMU_PathFollowerDriver.cpp  FMU_PathFollowerDriver.h
src/fmu2_wheeled_vehicle_4torques/: CMakeLists.txt  FMU_WheeledVehicle4Torques.cpp  FMU_WheeledVehicle4Torques.h
src/fmu2_wheeled_vehicle_4torques/resources/: BrakeSimple_Front.json  BrakeSimple_Rear.json  Chassis.json  Vehicle.json  Wheel.json
src/road_generator/: compile_generator.bat  generate_road.cpp  road_generator.py  road_generator_settings.json
